# python-image-processor

./: README.md  setup.cfg
myimageprocessor/: __init__.py  parser.py  path_handler.py  resize.py
tests/: test_main.py  test_parser.py  test_path_handler.py  test_resize.py
