[metadata]
name = py-im-process
version = 0.0.2
description = ローカルで実行するためのテスト
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = MIT
url = https://github.com/ftnext/python-image-processor

[options]
packages=find:
install_requires = 
    Pillow>=6.2

[options.extras_require]
dev = 
    black
    flake8

[options.entry_points]
console_scripts = 
    py-im-process = myimageprocessor:main
